--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <com.lr.ghp.scrollviewcontainer.view.ScrollViewContainer
+        android:id="@+id/scrollViewContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <!-- 第一个界面-->
+        <ScrollView
+            android:id="@+id/topView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/background">
+                <TextView
+                    android:id="@+id/top_view_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="600dp"
+                    android:gravity="center"
+                    android:text="第一个界面"/>
+                <TextView
+                    android:id="@+id/details_more"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/top_view_layout"
+                    android:paddingBottom="15dp"
+                    android:paddingTop="20dp"
+                    android:gravity="center"
+                    android:text="上拉加载更多"
+                    android:textSize="13sp"
+                    android:textColor="@color/high_color"/>
+            </RelativeLayout>
+        </ScrollView>
+        <!--第二个界面-->
+        <com.lr.ghp.scrollviewcontainer.view.MyScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <include layout="@layout/second_view_layout"/>
+            </LinearLayout>
+        </com.lr.ghp.scrollviewcontainer.view.MyScrollView>
+    </com.lr.ghp.scrollviewcontainer.view.ScrollViewContainer>
 
 </RelativeLayout>
